fixed broken styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,11 +5,11 @@
 h1,
 h2,
 h3 {
-    font-family: var(--title-font);
-    color: #333
+  font-family: var(--title-font);
+  color: #333;
 }
 
 body {
-    color: #333;
-    font-size: 100%;
+  color: #333;
+  font-size: 100%;
 }
